# MAGI

./: .gitignore  PACKAGE_USAGE.md  README.md  config.sample.yaml  magi-cli.py  prompts.yaml  pyproject.toml  requirements.txt  setup.py
magi/: core.py  prompts.yaml  utils.py
magi_core/: __init__.py  cli.py  core.py  prompts.yaml  utils.py
tests/: test_cli.py  test_core.py  test_integration_matrix.py
