[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magi-core"
version = "0.4.3"
description = "Multi-Agent Group Intelligence: orchestrate a council of LLMs to deliberate on complex questions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "ai", "decision-making", "multi-agent", "deliberation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.44.12",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
magi = "magi_core.cli:main"

[project.urls]
Homepage = "https://github.com/jason-chao/magi"
Repository = "https://github.com/jason-chao/magi"
Issues = "https://github.com/jason-chao/magi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["magi_core*"]

[tool.setuptools.package-data]
magi_core = ["*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: mark test as asyncio"]
